pos/static/js/parser.peg

start
  = wsp command:command wsp { return command; }

command
  = user:username wsp sel:selection { return {"type" : "US", "username" : user, "selection" : sel }; }
  / user:username wsp credit:credit { return {"type" : "UC", "username" : user, "credit": credit }; }
  / user:username wsp trans:transfer { return {"type" : "UT", "username" : user, "transfer" : trans }; }
  / user:username { return {"type": "U", "username" : user }; }
  / wsp { return {"type" : "" }; }


username
  = name:[a-zA-Z0-9_-]+ { return name.join(""); }

credit
  = ("credit" / "0") { return 0; }
  / ("credit" / "0") wsp amt:amount { return amt; }

amount
  = num:([0-9.]+) { return parseFloat(num.join(""), 10); }

transfer
  = "<" wsp user:username wsp amt:amount { return {"type": "<UA", "username": user, "amount" : amt}; } 
  / "<" wsp user:username { return {"type": ">U", "username" : user }; }
  / "<" { return {"type": ">" }; }

selection
  = num:([1-9]([0-9]?)) { return parseInt(num.join(""), 10); }

wsp
  = [ \t\r\n]*
 
